--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -533,12 +533,9 @@
 
     <script th:src="@{/js/plugins/datapicker/bootstrap-datepicker.js}"></script>
 
-  <!--  <script th:src="@{/js/plugins/dataTables/datatables.min.js}"></script>-->
-    <script th:src="@{/js/custom/jquery.dataTables1.10.16.min.js}"></script>
-    <script th:src="@{/js/custom/dataTables.buttons.js}"></script>
+    <script th:src="@{/js/plugins/dataTables/datatables.min.js}"></script>
     <script th:src="@{/js/custom/pdfmake.js}"></script>
     <script th:src="@{/js/custom/vfs_fonts.js}"></script>
-    <script th:src="@{/js/custom/buttons.html5.js}"></script>
 
 
     <!-- blueimp gallery -->
