完成月报改版 下一步新增月报历史数据配置功能

--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -481,12 +481,12 @@
                                     <table class="table table-striped table-bordered table-hover dataTables-example" style="width:100%">
                                         <thead>
                                         <tr>
-                                            <th  style="text-align: center;padding-top:30px">代码</th>
-                                            <th  style="text-align: center;padding-top:30px">指标名称</th>
-                                            <th  style="text-align: center;padding-top:30px">计量单位</th>
-                                            <th  style="text-align: center;padding-top:30px">本月</th>
-                                            <th  style="text-align: center;padding-top:30px">本年累计</th>
-                                            <th  style="text-align: center;padding-top:30px">开工累计</th>
+                                            <th  style="text-align: center;padding-top:30px">I.代 码</th>
+                                            <th  style="text-align: center;padding-top:30px">II．指 标 名 称</th>
+                                            <th  style="text-align: center;padding-top:30px">III．计 量 单 位</th>
+                                            <th  style="text-align: center;padding-top:30px">IV．本 月</th>
+                                            <th  style="text-align: center;padding-top:30px">V．本 年 累 计</th>
+                                            <th  style="text-align: center;padding-top:30px">VI．开 工 累 计</th>
                                         </tr>
                                         </thead>
                                         <tbody></tbody>
