月报完成 更新了审批账号在新增项目基础信息后立即再次更新基础信息无法提交的bug

--- a/src/main/resources/templates/base_info_show.html
+++ b/src/main/resources/templates/base_info_show.html
@@ -252,26 +252,6 @@
                                                                                 <span style="font-size: 15px;">农村人饮（万人）： </span>
                                                                                 <span style="font-size: 15px;" id="re_ruralHumanWater"> </span>
                                                                             </li>
-                                                                            <li class="info-element">
-                                                                                <span style="font-size: 15px;">中央投资（万元）： </span>
-                                                                                <span style="font-size: 15px;" id="re_centralInvestment"></span>
-                                                                            </li>
-                                                                            <li class="danger-element">
-                                                                                <span style="font-size: 15px;">市县投资（万元）： </span>
-                                                                                <span style="font-size: 15px;" id="re_localInvestment"></span>
-                                                                            </li>
-                                                                            <li class="warning-element">
-                                                                                <span style="font-size: 15px;">中央累计拨付（万元）: </span>
-                                                                                <span style="font-size: 15px;" id="re_centralAccumulativePayment"></span>
-                                                                            </li>
-                                                                            <li class="success-element">
-                                                                                <span style="font-size: 15px;">市县累计拨付（万元）： </span>
-                                                                                <span style="font-size: 15px;" id="re_localAccumulativePayment"> </span>
-                                                                            </li>
-                                                                            <li class="info-element">
-                                                                                <span style="font-size: 15px;">省级配套融资贷款（万元）： </span>
-                                                                                <span style="font-size: 15px;" id="re_provincialLoan"></span>
-                                                                            </li>
                                                                         </ul>
                                                                     </div>
                                                                     <div class="col-lg-6">
@@ -299,20 +279,14 @@
                                                                                 <span style="font-size: 15px;">城镇供水人口（万人)： </span>
                                                                                 <span style="font-size: 15px;" id="re_waterSupplyPopulation"> </span>
                                                                             </li>
-                                                                            <li class="info-element">
-                                                                                <span style="font-size: 15px;">省级投资（万元）： </span>
-                                                                                <span style="font-size: 15px;" id="re_provincialInvestment"></span>
-                                                                            </li>
+                                                                        </ul>
+                                                                    </div>
+                                                                    <div class="col-lg-12">
+                                                                        <div class="hr-line-dashed"></div>
+                                                                        <ul class="sortable-list connectList agile-list ui-sortable">
                                                                             <li class="danger-element">
                                                                                 <span style="font-size: 15px;">总投资（万元）： </span>
                                                                                 <span style="font-size: 15px;" id="re_totalInvestment"></span>
-                                                                            </li> <li class="warning-element">
-                                                                            <span style="font-size: 15px;">省级累计拨付（万元）亩 : </span>
-                                                                            <span style="font-size: 15px;" id="re_provincialAccumulativePayment"></span>
-                                                                        </li>
-                                                                            <li class="success-element">
-                                                                                <span style="font-size: 15px;">总累计拨付（万元）： </span>
-                                                                                <span style="font-size: 15px;" id="re_totalAccumulativePayment"> </span>
                                                                             </li>
                                                                         </ul>
                                                                     </div>
