--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1166,6 +1166,14 @@
                                     <h1><i class="fa fa-book"></i> 详细情况1</h1>
                                     <fieldset>
                                         <div class="row">
+                                            <div class="col-lg-12">
+                                                <div class="form-group">
+                                                    <label>计划总投资(万)</label><span style="color:red;"> *</span>
+                                                    <input id="totalInvestment" type="text" name="totalInvestment"
+                                                           class="form-control required " maxlength="15">
+                                                </div>
+                                                <div class="hr-line-dashed"></div>
+                                            </div>
                                             <div class="col-lg-6">
                                                 <div class="form-group">
                                                     <label>坝型</label><span style="color:red;"> *</span>
@@ -1198,28 +1206,6 @@
                                                 <div class="form-group">
                                                     <label>农村人饮（万人）</label><span style="color:red;"> *</span>
                                                     <input id="ruralHumanWater" type="text" name="ruralHumanWater"
-                                                           class="form-control number required" maxlength="10">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label>中央投资（万元）</label><span style="color:red;"> *</span>
-                                                    <input id="centralInvestment" type="text" name="centralInvestment"
-                                                           class="form-control required number " maxlength="15">
-                                                </div>
-
-                                                <div class="form-group">
-                                                    <label>市县投资（万元）</label><span style="color:red;"> *</span>
-                                                    <input id="localInvestment" type="text" name="localInvestment"
-                                                           class="form-control number required" maxlength="15">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label>省级累计拨付（万元）亩</label><span style="color:red;"> *</span>
-                                                    <input id="provincialAccumulativePayment" type="text"
-                                                           name="provincialAccumulativePayment"
-                                                           class="form-control number required" maxlength="10">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label>省级配套融资贷款（万元）</label><span style="color:red;"> *</span>
-                                                    <input id="provincialLoan" type="text" name="provincialLoan"
                                                            class="form-control number required" maxlength="10">
                                                 </div>
                                             </div>
@@ -1255,24 +1241,7 @@
                                                            name="waterSupplyPopulation"
                                                            class="form-control number required" maxlength="10">
                                                 </div>
-                                                <div class="form-group">
-                                                    <label>省级投资（万元）</label><span style="color:red;"> *</span>
-                                                    <input id="provincialInvestment" name="provincialInvestment"
-                                                           type="text" class="form-control number required"
-                                                           maxlength="15">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label>中央累计拨付（万元）</label><span style="color:red;"> *</span>
-                                                    <input id="centralAccumulativePayment" type="text"
-                                                           name="centralAccumulativePayment"
-                                                           class="form-control number required" maxlength="20">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label>市县累计拨付（万元）</label><span style="color:red;"> *</span>
-                                                    <input id="localAccumulativePayment" type="text"
-                                                           name="localAccumulativePayment"
-                                                           class="form-control number required" maxlength="10">
-                                                </div>
+
                                             </div>
                                         </div>
                                     </fieldset>
