--- a/src/main/resources/templates/project_monthly_report.html
+++ b/src/main/resources/templates/project_monthly_report.html
@@ -208,7 +208,8 @@
                                         <input id="labour_force" name="labour_force" type="text" class="form-control required number"  maxlength="15">
                                     </div>
                                 </div>
-                             
+                            </div>
+                            <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label>主要建设内容</label>
@@ -229,6 +230,7 @@
                                         <label>工程形象进度及节点工期</label>
                                         <textarea id="visual_progress" class="form-control required" maxlength="250"></textarea>
                                     </div>
+                                    <div class="hr-line-dashed"></div>
                                     <div class="form-group">
                                         <label>采取的主要措施</label>
                                         <textarea id="measure" class="form-control " maxlength="250"></textarea>
