--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -105,6 +105,9 @@
                                 <li>
                                     <a href="#" id="project_months">已填报月报</a>
                                 </li>
+                                <li>
+                                    <a href="#" id="month_history_statistic">历史数据设置</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
@@ -1685,7 +1688,7 @@
 
 <!-- Jquery Validate -->
 <script th:src="@{/js/plugins/validate/jquery.validate.min.js}"></script>
-
+<script src="http://static.runoob.com/assets/jquery-validation-1.14.0/dist/localization/messages_zh.js"></script>
 <script th:src="@{/js/custom/enjoyhint.min.js}" type="text/javascript"></script>
 <!-- custom -->
 <script th:src="@{/js/custom/index.js}"></script>
