完成月报历史数据功能

--- a/src/main/resources/templates/history_info_new.html
+++ b/src/main/resources/templates/history_info_new.html
@@ -49,7 +49,7 @@
                                             <div class="panel-options">
                                                 <ul class="nav nav-tabs">
                                                     <li class="active"><a href="#history_info_tab-1" data-toggle="tab"><i class="fa fa-line-chart"></i>数据填报</a></li>
-                                                    <li class=""><a href="#history_info_tab-2" data-toggle="tab"><i class="fa fa-book"></i>附件</a></li>
+                                                 <!--   <li class=""><a href="#history_info_tab-2" data-toggle="tab"><i class="fa fa-book"></i>附件</a></li>-->
                                                 </ul>
                                             </div>
                                         </div>
@@ -187,7 +187,7 @@
                                                         </div>
                                                     </fieldset>
                                                 </div>
-                                                <div class="tab-pane animated fadeInUp" id="history_info_tab-2">
+                                                <!--<div class="tab-pane animated fadeInUp" id="history_info_tab-2">
                                                     <div class="panel-body">
                                                         <fieldset class="form-horizontal">
                                                             <h2>图片、附件上传</h2>
@@ -207,7 +207,7 @@
                                                             <div class="hr-line-dashed"></div>
                                                         </fieldset>
                                                     </div>
-                                                </div>
+                                                </div>-->
                                             </div>
                                             <div class="col-lg-offset-10 col-lg-2">
                                                 <button type="button" id="history_info_submit" class="submit btn btn-info">提交</button>
