--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,7 +38,7 @@
                 <li class="nav-header">
                     <div class="dropdown profile-element">
                         <span>
-                            <img alt="image" class="img-circle" src="img/profile_small.jpg"/>
+                            <img alt="image" class="img-circle" src="img/portait_logo.png"/>
                         </span>
                         <a id="person_menu" data-toggle="dropdown" class="dropdown-toggle" href="#">
                             <span class="clear">
