--- a/src/main/resources/templates/history_info_show.html
+++ b/src/main/resources/templates/history_info_show.html
@@ -40,11 +40,13 @@
                                 <div class="col-lg-4">
                                     <h2>历史统计数据</h2>
                                 </div>
-                                <div class="col-lg-offset-6 col-lg-2">
-                                    <a id="" class="btn btn-danger btn-facebook animation_select" data-toggle="modal" data-target="#history_info_modal">
-                                        审批
-                                    </a>
-                                    <a id="history_info_repeat" data-toggle="tooltip" data-placement="bottom" title="点击后重新填报！"><i class="fa fa-repeat fa-lg"></i></a>
+                                <div class="col-lg-offset-6 col-lg-2" id="history_monthly_statistic_approval_div">
+                                    <shiro:hasRole name="checker">
+                                        <a id="history_monthly_statistic_approval_btn" class="btn btn-danger btn-facebook animation_select" data-toggle="modal" data-target="#history_info_modal">
+                                            审批
+                                        </a>
+                                    </shiro:hasRole>
+                                    <a id="history_info_repeat" class="btn btn-danger" data-toggle="tooltip" data-placement="bottom" title="点击后重新填报！"><i class="fa fa-repeat fa-lg"></i></a>
                                 </div>
                             </div>
                             <br><br><br><br><br>
@@ -52,12 +54,11 @@
                                 <div class="col-lg-12">
                                     <dl>
                                         <dt>提交进度:</dt>
-                                        <br>
                                         <dd>
-                                            <div class="progress progress-striped active m-b-sm">
+                                            <div class="progress progress-striped active m-b-sm" id="state_bar">
                                                 <div style="width: 50%;" class="progress-bar"></div>
                                             </div>
-                                            <small>历史统计数据提交情况： <strong>等待领导审批</strong> </small>
+                                            <small>历史统计数据提交情况： <strong id="state_msg"></strong> </small>
                                         </dd>
                                     </dl>
                                 </div>
@@ -68,8 +69,8 @@
                                         <div class="panel-heading">
                                             <div class="panel-options">
                                                 <ul class="nav nav-tabs">
-                                                    <li class="active"><a href="#history_info_tab-1" data-toggle="tab"><i class="fa fa-line-chart"></i>数据填报</a></li>
-                                                    <li class=""><a href="#history_info_tab-2" data-toggle="tab"><i class="fa fa-book"></i>附件</a></li>
+                                                    <li class="active"><a href="#history_info_tab-1" data-toggle="tab"><i class="fa fa-line-chart"></i>历史数据</a></li>
+                                             <!--       <li class=""><a href="#history_info_tab-2" data-toggle="tab"><i class="fa fa-book"></i>附件</a></li>-->
                                                 </ul>
                                             </div>
                                         </div>
@@ -205,7 +206,7 @@
                                                         </div>
                                                     </fieldset>
                                                 </div>
-                                                <div class="tab-pane animated fadeInUp" id="history_info_tab-2">
+                                                <!--<div class="tab-pane animated fadeInUp" id="history_info_tab-2">
                                                     <div class="panel-body">
                                                         <div class="col-lg-12">
                                                             <div class="ibox">
@@ -234,7 +235,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div>-->
                                             </div>
                                         </div>
                                     </div>
@@ -246,10 +247,20 @@
             </div>
             <div class="col-lg-3">
                 <div class="wrapper wrapper-content project-manager">
-                    <h4>备注</h4>
+                    <h4>* 注:</h4>
                     <img src="img/zender_logo.png" class="img-responsive">
                     <p>
-                        填报数据为2018年前，项目统计数据，请认真填写
+                        若本水库建设时间始于2018年1月1日，则不需要在本页面配置任何数据。
+                    </p>
+                    <p>
+                        本功能专门针对建设时间早于2018年1月的水库项目，为合理统计建设期见各种相关统计指标，
+                        请在此页面补足截至2017年12月30日的所有下列统计指标。
+                    </p>
+                    <p>
+                        如左侧“建筑工程”栏，即表示截至2017年12月30日所有建筑工程投资完成总和。
+                    </p>
+                    <p>
+                        其余填写的栏目意义均同上。
                     </p>
                 </div>
             </div>
@@ -260,7 +271,7 @@
     <!--审批modal-->
     <div class="modal inmodal" id="history_info_modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content animated bounceInRight">
+            <div class="modal-content animated bounceInRight" id="history_statistic_check_div">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">
                         <span aria-hidden="true">&times;</span><span class="sr-only">关闭</span>
@@ -268,12 +279,12 @@
                     <h1 class="modal-title">历史统计数据审批</h1>
 
                     <br>
-                    <input type="checkbox" name="my-checkbox" id="my-checkbox">
+                    <input type="checkbox" name="monthly-history-statistic-checkbox" id="monthly_history_statistic_checkbox">
                 </div>
                 <div class="modal-body">
-                    <div class="form-group animated fadeIn" id="approve_input" style="display:none;">
+                    <div class="form-group animated fadeIn" id="monthly_history_statistic_approve_input" style="display:none;">
                         <label style="font-size: 15px;">若不通过，请说明原因:</label>
-                        <textarea id="approve_area" rows="5" placeholder="填写内容请控制在250字以内。" class="form-control" maxlength="250">
+                        <textarea id="monthly_history_statistic_area" rows="5" placeholder="填写内容请控制在250字以内。" class="form-control" maxlength="250">
                                                             </textarea>
                     </div>
                 </div>
