年度投资计划ing

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -110,6 +110,17 @@
                                 </li>
                             </ul>
                         </li>
+                        <li>
+                            <a href="#">投资管理<span class="fa arrow"></span></a>
+                            <ul class="nav nav-third-level">
+                                <li>
+                                    <a href="#" id="annual_investment_plan_new_entry">年度投资计划新增</a>
+                                </li>
+                                <li>
+                                    <a href="#" id="annual_investment_plan_manage_entry">年度投资计划管理</a>
+                                </li>
+                            </ul>
+                        </li>
                     </ul>
                 </li>
                 <li>
