--- a/src/main/resources/templates/project_monthly_report.html
+++ b/src/main/resources/templates/project_monthly_report.html
@@ -52,19 +52,56 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="form-group">
-                                        <label>建筑工程(万元)</label><span style="color:red;"> *</span>
-                                        <input id="civil_engineering" name="civil_engineering" type="text" class="form-control required number" maxlength="15">
+                                        <div class="row">
+                                            <div class="col-lg-4">
+                                                <label>建筑工程(万元)</label><span style="color:red;"> *</span>
+                                                <input id="civil_engineering" name="civil_engineering" type="text" class="form-control required number" maxlength="15">
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <label>本年度累计</label><span style="color:red;"> </span>
+                                                <div class="bg-primary p-xxs b-r-xl"> 54561.23</div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <label>开工累计</label><span style="color:red;"> </span>
+                                                <div class="bg-primary p-xxs b-r-xl"> 54561.23</div>
+                                            </div>
+                                        </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label>金属机构设备及安装工程(万元)</label><span style="color:red;"> *</span>
-                                        <input id="metal_mechanism" name="metal_mechanism" type="text" class="form-control required number" maxlength="15">
+                                        <div class="row">
+                                            <div class="col-lg-6">
+                                                <label>金属机构设备及安装工程(万元)</label><span style="color:red;"> *</span>
+                                                <input id="metal_mechanism" name="metal_mechanism" type="text" class="form-control required number" maxlength="15">
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label>本年度累计</label><span style="color:red;"> </span>
+                                                <div class="bg-primary p-xxs b-r-xl"> 54561.23</div>
+                                            </div>
+                                            <div class="col-lg-3">
+                                                <label>开工累计</label><span style="color:red;"> </span>
+                                                <div class="bg-primary p-xxs b-r-xl"> 54561.23</div>
+                                            </div>
+                                        </div>
                                     </div>
 
                                     <div class="form-group">
-                                        <label>独立费用(万元)</label><span style="color:red;"> *</span>
-                                        <input id="independent_cost" name="independent_cost" type="text" class="form-control required number" maxlength="15">
+                                        <div class="row">
+                                            <div class="col-lg-4">
+                                                <label>独立费用(万元)</label><span style="color:red;"> *</span>
+                                                <input id="independent_cost" name="independent_cost" type="text" class="form-control required number" maxlength="15">
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <label>本年度累计</label><span style="color:red;"> </span>
+                                                <div class="bg-primary p-xxs b-r-xl"> 54561.23</div>
+                                            </div>
+                                            <div class="col-lg-4">
+                                                <label>开工累计</label><span style="color:red;"> </span>
+                                                <div class="bg-primary p-xxs b-r-xl"> 54561.23</div>
+                                            </div>
+                                        </div>
                                     </div>
+
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="form-group">
