--- a/src/main/resources/templates/annual_investment_plan_show.html
+++ b/src/main/resources/templates/annual_investment_plan_show.html
@@ -40,14 +40,6 @@
                         <br>
                         <div class="ibox-content">
                             <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="m-b-md">
-                                        <h2>思南县沙坝水库工程</h2>
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="row">
                                 <div class="col-lg-12">
                                     <div class="tabs-container">
                                         <ul class="nav nav-tabs">
@@ -158,7 +150,7 @@
     <div class="modal-dialog modal-lg" role="document" style="width:50%">
         <div class="modal-content">
             <div class="modal-header">
-                <a id="investment_plan_modal_show_close"><button type="button" class="close"  aria-label="Close"><span aria-hidden="true">&times;</span></button></a>
+                <a id="investment_plan_modal_show_close"><button type="button" class="annual_investment_modal_close close"  aria-label="Close"><span aria-hidden="true">&times;</span></button></a>
                 <div class="panel-body">
                     <div class="col-lg-12">
                         <div class="ibox">
@@ -167,20 +159,7 @@
                             </div>
                             <div class="ibox-content">
                                 <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="file-box">
-                                            <div class="file">
-                                                <span class="corner"></span>
-                                                <div class="icon">
-                                                </div>
-                                                <div class="file-name">
-                                                    Document_2014.doc
-                                                    <br/>
-                                                    <small>Added: Jan 11, 2014</small>
-                                                    <button class="btn-primary pull-right">下载</button>
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div class="col-lg-12" id="annual_investment_file_display_div">
                                     </div>
                                 </div>
                             </div>
@@ -190,7 +169,7 @@
             </div>
             <div class="modal-body">
                 <div class="modal-footer">
-                    <button  id="investment_plan_modal_show_close1" type="button" class="btn btn-info">关 闭</button>
+                    <button  id="investment_plan_modal_show_close1" type="button" class="btn btn-info annual_investment_modal_close">关 闭</button>
                 </div>
             </div>
         </div>
