--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -83,10 +83,15 @@
                                     <a href="#" id="base_info">项目概况</a>
                                 </li>
                                 <li>
-                                    <a href="#">招标方案</a>
-                                </li>
-                                <li>
-                                    <a href="#">招标备案</a>
+                                    <a href="#">招标管理 <span class="fa arrow"></span></a>
+                                    <ul class="nav nav-fourth-level">
+                                        <li>
+                                            <a href="#" id="tender_new_entry">招标项目新增</a>
+                                        </li>
+                                        <li>
+                                            <a href="#" id="tender_manage_entry">招标项目管理</a>
+                                        </li>
+                                    </ul>
                                 </li>
                                 <li>
                                     <a href="#" id="contract">合同备案</a>
