--- a/src/main/resources/templates/tender_show.html
+++ b/src/main/resources/templates/tender_show.html
@@ -38,20 +38,12 @@
                         <br>
                         <div class="ibox-content">
                             <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="m-b-md">
-                                        <h2>思南县沙坝水库工程</h2>
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="row">
                                 <div class="col-lg-12">
                                     <div class="tabs-container">
                                         <ul class="nav nav-tabs">
-                                            <li class="active"><a data-toggle="tab" href="#tender_show_tab_1"><i class="fa fa-check-square-o"></i> 已审批</a></li>
-                                            <li class=""><a data-toggle="tab" href="#tender_show_tab_2"> <i class="fa fa-clock-o"></i>未审批</a></li>
-                                            <li class=""><a data-toggle="tab" href="#tender_show_tab_3"> <i class="fa fa-times-rectangle-o"></i>审批未通过</a></li>
+                                            <li class="active"><a data-toggle="tab" id="tender_show_tab_btn1" href="#tender_show_tab_1"><i class="fa fa-check-square-o"></i> 已审批</a></li>
+                                            <li class=""><a data-toggle="tab" id="tender_show_tab_btn2" href="#tender_show_tab_2"> <i class="fa fa-clock-o"></i>未审批</a></li>
+                                            <li class=""><a data-toggle="tab" id="tender_show_tab_btn3" href="#tender_show_tab_3"> <i class="fa fa-times-rectangle-o"></i>审批未通过</a></li>
                                             <li class=""><a id="tender_show_tab_4"> <i class="fa fa-arrow-right"></i>新增</a></li>
                                         </ul>
                                         <div class="tab-content">
@@ -133,14 +125,14 @@
 <!--审批modal-->
 <div class="modal inmodal" id="tender_approve_modal" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content animated bounceInRight">
+        <div class="modal-content animated bounceInRight" id="tender_check_div">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">
                     <span aria-hidden="true">&times;</span><span class="sr-only">关闭</span>
                 </button>
                 <h1 class="modal-title">招标信息审批</h1>
                 <br>
-                <input type="checkbox" name="my-checkbox" id="my-checkbox">
+                <input type="checkbox" name="tender_checkbox" id="tender_checkbox">
             </div>
             <div class="modal-body">
                 <div class="form-group animated fadeIn" id="tender_approve_input" style="display:none;">
@@ -162,7 +154,7 @@
     <div class="modal-dialog modal-lg" role="document" style="width:50%">
         <div class="modal-content">
             <div class="modal-header">
-                <a id="tender_modal_show_close"><button type="button" class="close"  aria-label="Close"><span aria-hidden="true">&times;</span></button></a>
+                <a id="tender_modal_show_close"><button type="button" class="close tender_modal_close_btn"  aria-label="Close"><span aria-hidden="true">&times;</span></button></a>
                 <div class="panel-body">
                     <div class="col-lg-12">
                         <div class="ibox">
@@ -171,20 +163,8 @@
                             </div>
                             <div class="ibox-content">
                                 <div class="row">
-                                    <div class="col-lg-12">
-                                        <div class="file-box">
-                                            <div class="file">
-                                                <span class="corner"></span>
-                                                <div class="icon">
-                                                </div>
-                                                <div class="file-name">
-                                                    Document_2014.doc
-                                                    <br/>
-                                                    <small>Added: Jan 11, 2014</small>
-                                                    <button class="btn-primary pull-right">下载</button>
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div class="col-lg-12" id="tender_file_display_div">
+
                                     </div>
                                 </div>
                             </div>
@@ -194,7 +174,7 @@
             </div>
             <div class="modal-body">
                 <div class="modal-footer">
-                    <button  id="tender_modal_show_close1" type="button" class="btn btn-info">关 闭</button>
+                    <button  id="tender_modal_show_close1" type="button" class="btn btn-info tender_modal_close_btn">关 闭</button>
                 </div>
             </div>
         </div>
@@ -202,200 +182,8 @@
 </div>
 
 <script th:src="@{/js/custom/bootstrap-switch.min.js}"></script>
-<script th:src="@{/js/custom/annual_investment_plan_show.js}"></script>
-<script>
-    $(document).ready(function(){
-        var datatable= [
-            [
-                "",
-                "供水及灌区工程施工（函管材）CIV标段",
-                "2015-12-08",
-                "2016-12-08",
-                "贵州鹏业工程建设咨询事务有限责任公司",
-                "贵州长禹建设工程有限公司",
-            ],
-            [
-                "",
-                "供水及灌区工程施工（函管材）CIV标段",
-                "2015-12-08",
-                "2016-12-08",
-                "贵州鹏业工程建设咨询事务有限责任公司",
-                "贵州长禹建设工程有限公司",
-            ],
-            [
-                "",
-                "供水及灌区工程施工（函管材）CIV标段",
-                "2015-12-08",
-                "2016-12-08",
-                "贵州鹏业工程建设咨询事务有限责任公司",
-                "贵州长禹建设工程有限公司",
-            ]
-        ];
-        $('#tender_table1').DataTable({
-            data:datatable,
-            // bFilter: false,  //去掉搜索框
-            bInfo:true,        //去掉显示信息
-            retrieve: true,    //多次加载不会显示缓存数据
-            pageLength: 10,
-            ordering:true,
-            responsive: true,
-            paging: true,
-            dom: '<"html5buttons"B>lTfgitp',
-            buttons: [
-                {
-                    "extend": 'pdfHtml5',
-                    'title': '招标信息', //导出文件名字
-                    'text': '导出PDF', //定义导出excel按钮的文字
-                    "aButtons": "true",
-                    // "sCharSet": "utf8",
-                    // 'download': 'open',//直接在窗口打开
-                    // 'orientation': 'landscape',
-                    // 'pageSize': 'LEGAL',
-                },
-                {extend: 'copy'},
-                {extend: 'csv'},
-                {extend: 'excel',},
-                {extend:'print',customize: function (win){
-                        $(win.document.body).addClass('white-bg');
-                        $(win.document.body).css('font-size', '10px');
-                        $(win.document.body).find('table')
-                            .addClass('compact')
-                            .css('font-size', 'inherit');
-                    }
-                }
-            ],
-            "aoColumnDefs":[
-                {//倒数第一列
-                    "targets":-1,
-                    "bSortable": false,
-                    render: function(data, type, row) {
-                        var html ='<button class="btn btn-xs btn-danger" data-toggle="modal" data-target="#tender_show_modal">附件</button>';
-                        return html;
-                    }
-                },
-            ]
-        });
+<script th:src="@{/js/custom/tender_show.js}"></script>
 
-        $('#tender_table2').DataTable({
-            data:datatable,
-            // bFilter: false,    //去掉搜索框
-            bInfo:true,       //去掉显示信息
-            retrieve: true,    //多次加载不会显示缓存数据
-            pageLength: 10,
-            ordering:false,
-            responsive: true,
-            paging: true,
-            dom: '<"html5buttons"B>lTfgitp',
-            buttons: [
-                {
-                    "extend": 'pdfHtml5',
-                    'title': '年度计划投资表', //导出文件名字
-                    'text': '导出PDF', //定义导出excel按钮的文字
-                    "aButtons": "true",
-                    // "sCharSet": "utf8",
-                    // 'download': 'open',//直接在窗口打开
-                    // 'orientation': 'landscape',
-                    // 'pageSize': 'LEGAL',
-                },
-                {extend: 'copy'},
-                {extend: 'csv'},
-                {extend: 'excel',},
-                {extend:'print',customize: function (win){
-                        $(win.document.body).addClass('white-bg');
-                        $(win.document.body).css('font-size', '10px');
-                        $(win.document.body).find('table')
-                            .addClass('compact')
-                            .css('font-size', 'inherit');
-                    }
-                }
-            ],
-            "aoColumnDefs":[
-                {//倒数第一列
-                    "targets":-1,
-                    "bSortable": false,
-                    render: function(data, type, row) {
-                        var html ='<button class="btn btn-xs btn-danger" data-toggle="modal" data-target="#tender_show_modal">附件</button>&nbsp;&nbsp;&nbsp;'+
-                            '<button class="btn btn-xs btn-danger" data-toggle="modal" data-target="#tender_approve_modal">审批</button>';
-                        return html;
-                    }
-                },
-            ]
-        });
-        $('#tender_modal_show_close1,#tender_modal_show_close').click(function () {
-            $("#tender_show_modal").modal('hide');
-        });
-        $('#tender_table3').DataTable({
-            data:datatable,
-            // bFilter: false,  //去掉搜索框
-            bInfo:true,        //去掉显示信息
-            retrieve: true,    //多次加载不会显示缓存数据
-            pageLength: 10,
-            ordering:false,
-            responsive: true,
-            paging: true,
-            dom: '<"html5buttons"B>lTfgitp',
-            buttons: [
-                {
-                    "extend": 'pdfHtml5',
-                    'title': '年度计划投资表', //导出文件名字
-                    'text': '导出PDF', //定义导出excel按钮的文字
-                    "aButtons": "true",
-                    // "sCharSet": "utf8",
-                    // 'download': 'open',//直接在窗口打开
-                    // 'orientation': 'landscape',
-                    // 'pageSize': 'LEGAL',
-                },
-                {extend: 'copy'},
-                {extend: 'csv'},
-                {extend: 'excel',},
-                {extend:'print',customize: function (win){
-                        $(win.document.body).addClass('white-bg');
-                        $(win.document.body).css('font-size', '10px');
-                        $(win.document.body).find('table')
-                            .addClass('compact')
-                            .css('font-size', 'inherit');
-                    }
-                }
-            ],
-            "aoColumnDefs":[
-                {//倒数第一列
-                    "targets":-1,
-                    "bSortable": false,
-                    render: function(data, type, row) {
-                        var html ='<button class="btn btn-xs btn-danger" data-toggle="modal" data-target="#tender_show_modal" value="'+row.tcId+'">附件</button>';
-                        return html;
-                    }
-                },
-            ]
-        });
-        $('#tender_show_tab_4').click(function () {
-            $('#main-page').load('tender_new.html');
-        });
-
-        $("[name='my-checkbox']").bootstrapSwitch({
-            onText : "拒绝",
-            offText : "通过",
-            onColor : "danger",
-            offColor : "success",
-            size : "large",
-            onSwitchChange : function() {
-                var checkedOfAll=$("#my-checkbox").prop("checked");
-                if (checkedOfAll==false){
-                    $('#tender_approve_input').hide()
-                }
-                else {
-                    $('#tender_approve_input').show();
-                    $('#tender_approve_area').text('');
-                }
-            }
-        });
-        $('#tender_approve_submit').click(function () {
-            var checkedOfAll=$("#my-checkbox").prop("checked");
-            var checkinfo=$('#tender_approve_area').val();
-            alert(checkedOfAll+checkinfo)
-        })
-    });
-</script>
 </body>
 </html>
 
