--- a/src/main/resources/templates/project_monthly_report.html
+++ b/src/main/resources/templates/project_monthly_report.html
@@ -40,7 +40,7 @@
         <div class="col-lg-12">
             <div class="ibox">
                 <div class="ibox-title">
-                    <h5>月报新增</h5>
+                    <h5>月报新增</h5><small> <i>（下列月报内容除"备注"和"附件"外，均未必填项，数字取小数点后两位。）</i> </small>
                 </div>
                 <div class="ibox-content">
                     <form id="form" action="#" class="wizard-big">
