--- a/src/main/resources/templates/tender_new.html
+++ b/src/main/resources/templates/tender_new.html
@@ -31,7 +31,7 @@
                     <div class="ibox-title">
                         <div class="row">
                             <div class="col-lg-12">
-                                <h2>招标信息填报 <small> <i>（下列每项需谨慎填写，一经审核不可更改。）</i> </small></h2>
+                                <h2>招标信息填报</h2>
                             </div>
                         </div>
                         <div class="ibox-content">
