--- a/src/main/resources/templates/project_monthly_report_show.html
+++ b/src/main/resources/templates/project_monthly_report_show.html
@@ -92,12 +92,21 @@
                                     <h2 id="plantName"></h2>
                                 </div>
                             </div>
-                            <div class="col-lg-12">
+                            <div class="col-lg-7">
                                 <dl class="dl-horizontal">
                                     <dt>月份:</dt> <dd id="month"></dd>
                                 </dl>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-5">
                                 <dl class="dl-horizontal">
                                     <dt>状态:</dt> <dd><span class="label label-info" id="state"></span></dd>
+                                </dl>
+                            </div>
+                            <div class="col-lg-7">
+                                <dl class="dl-horizontal" >
+                                    <dt>填报时间:</dt> <dd id="submitTime"> </dd>
                                 </dl>
                             </div>
                         </div>
@@ -107,9 +116,9 @@
                                     <dt>上报人:</dt> <dd id="submitter"> </dd>
                                 </dl>
                             </div>
-                            <div class="col-lg-7" id="cluster_info">
+                            <div class="col-lg-7">
                                 <dl class="dl-horizontal" >
-                                    <dt>填报时间:</dt> <dd id="submitTime"> </dd>
+                                    <dt>统计负责人:</dt> <dd id="statisticalLeader"> </dd>
                                 </dl>
                             </div>
                         </div>
